[#3098] feat(event-handling): PooledStreamingEventProcessorTest - rewritten with builder